# project-UpdateService

./: .coverage  .gitlab-ci.yml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  unittests.xml
docs/: erd.puml  project-structure.puml
updateservice/: app.py  settings.py
updateservice/api_tests/: test_example.py
updateservice/apis/: hello_api.py
updateservice/repositories/: hello_repo.py
updateservice/services/: hello_srv.py
