[tool.poetry]
name = "updateservice"
version = "0.1.0"
description = "Simple Python REST service to manage packages updates"
authors = ["Yuriy Senko <ysenko@lohika.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.2"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
pydantic = "^1.9.0"
poethepoet = "^0.13.1"
pendulum = "^2.1.2"
django = "^4.1.3"
coverage = "^6.5.0"
pytest-cov = "^4.0.0"
rm = "^2020.12.3"

[tool.poetry.dev-dependencies]
ipython = "^8.2.0"
ipdb = "^0.13.9"
mypy = "^0.942"

pylint = "^2.13.7"
pytest = "^7.1.2"
isort = "^5.10.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks]

    [tool.poe.tasks.test]
    help = "Run tests"
    cmd  = "pytest --cov=."

    [tool.poe.tasks.clean]
  help = "Remove files"
  cmd  = """
    # multiline commands including comments work too!
    del .coverage
           .mypy_cache
           .pytest_cache
           ./**/__pycache__
           dist
           htmlcov

  """

    [[tool.poe.tasks.test.args]]
    help = "Delete previous reports and generate a new one"
    name = "cov_report_type"
    options = ["--cov-report-type"]
    default = "xml"



#    [tool.poe.tasks.time]
#    shell = """
#    from datetime import datetime
#
#    print(datetime.now())
#    """
#    interpreter = "python"











